--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -36,7 +36,7 @@
 <h2>Review List</h2>
 <ul>
     <% @book.book_review.each do |book_review| %>
-        <li><%= book_review.review %>(<i><%= book_review.user_id %></i>)</li>
+        <li><%= book_review.review %>(<i><%= book_review.user.name if book_review.user %></i>)</li>
     <% end %>
 </ul>
 <%= link_to 'Back', books_path %>
